Actualizacion de casi la ultima version sin el update de datos de usuario

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem commodi consectetur ea iure nulla officiis rerum tempore tenetur vitae. Asperiores, corporis cupiditate dignissimos eius labore minus nihil quod sed ullam.</string>
+    <string name="about_text">SEDD Trivia es un juego desarrollado como aplicación nativa para el sistema operativo Android, en donde el jugador aprende todo acerca de la metodología de desarrollo agíl DSDM.</string>
     <string name="developer"><![CDATA[Developer & UI Designer]]></string>
-    <string name="step_of">Step %1$d of %2$d</string>
-    <string name="Reglas">1. Lorem ipsum dolor sit amet\n\n2. Lorem ipsum dolor sit amet \n\n3. Lorem ipsum dolor sit amet \n\n4. Lorem ipsum dolor sit amet \n\n5. Lorem ipsum dolor sit amet\n\n6. Lorem ipsum dolor sit amet</string>
+    <string name="step_of">Lección %1$d de %2$d</string>
+    <string name="Reglas">1. Al responder correctamente 3 preguntas, avanzas de nivel.\n\n2. Gana experiencia al responder correctamente.\n\n3. Cada pregunta solo tiene una respuesta correcta.\n\n4. Al no responder correctamente 3 preguntas, podras repetir el nivel. \n\n5. El ranking depende de la experiencia acumulada.</string>
     <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
 
 </resources>
