--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="about_text">SEDD Trivia es un juego desarrollado como aplicación nativa para el sistema operativo Android, en donde el jugador aprende todo acerca de la metodología de desarrollo agíl DSDM.</string>
     <string name="developer"><![CDATA[Developer & UI Designer]]></string>
     <string name="step_of">Lección %1$d de %2$d</string>
-    <string name="Reglas">1. Al responder correctamente 3 preguntas, avanzas de nivel.\n\n2. Gana experiencia al responder correctamente.\n\n3. Cada pregunta solo tiene una respuesta correcta.\n\n4. Al no responder correctamente 3 preguntas, podras repetir el nivel. \n\n5. El ranking depende de la experiencia acumulada.</string>
+    <string name="Reglas">1. Al responder correctamente 3 preguntas, avanzas de nivel.\n\n2. Gana experiencia al responder correctamente.\n\n3. Cada pregunta solo tiene una respuesta correcta.\n\n4. Al no responder correctamente 3 preguntas, podras repetir el nivel. \n\n5. El ranking depende de la experiencia acumulada. \n\n6. La dificultad aumenta según el nivel, asi como también la experiencia.</string>
     <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
 
 </resources>
